# api-dynamic-ingestion

./: .env  .gitignore  Dockerfile  README.md  api_connection_optimized.py  api_connection_optimized2.py  api_connection_using_class.py  api_dynamic_ingestion.py  covid_client_test.py  covid_test.py  pyproject.toml  unittest.py
.github/workflows/: python-etl-deployment.yml
dbt_sf/: README.md  dbt_project.yml
dbt_sf/macros/: generate_schema_name.sql
dbt_sf/models/: schema.yml  sources.yml
dbt_sf/models/core/: covid_metrics.sql  covid_regional_metrics.sql
dbt_sf/models/mart/: covid_trends.sql
dbt_sf/tests/: assert_case_fatality_rate_calculation.sql
exports/: sample_data.json
exports/20250330210146/: covid_raw_sample.csv
exports/20250330210337/: covid_raw_sample.csv
